# CambridgeReport

./: .gitignore  404.html  index.html  manage.py  mkdocs.yml  objects.inv  pyproject.toml
CambridgeReport/: asgi.py  settings.py  urls.py  wsgi.py
bruker/: views.py
bruker/read_data/: __init__.py  _config_.py  _open_file_.py  batch.py  chromatogram.py  drug.py  ion.py  read.py  sample.py  ufuns.py
templates/: index.html
